# mavo-windows

./: .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
scripts/: prepare-ffmpeg.ps1
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/animation/: AnimatedImageContext.tsx
src/audio/: AudioPlayerContext.tsx
src/components/: AnimatedImagePlayer.tsx  AppHeader.tsx  AssetPreviewDialog.tsx  AssetThumbnail.tsx  AssetVirtualGrid.tsx  AudioDirectoryTree.tsx  AudioPlayer.tsx  AudioWaveform.tsx  BatchTagToolbar.tsx  DetailPanel.tsx  FilterSidebar.tsx  ScanDialog.tsx  TagGroupField.tsx  TagManager.tsx  TagPicker.tsx  ToolsWorkspace.tsx  VideoPlayer.tsx
src/data/: assets.ts
src/lib/: assetDimensions.ts  desktopAssets.ts  indexedAssets.ts  mediaPlayback.ts
